feat: 🎸 add app embed block template

--- a/locales/en.schema.json
+++ b/locales/en.schema.json
@@ -7,6 +7,13 @@
           "info":"This is a Title"
         }
       }
+    },
+    "embed": {
+      "settings": {
+        "showButton": {
+          "label": "Show Button"
+        }
+      }
     }
   }
 }
