--- a/locales/zh-hant-tw.schema.json
+++ b/locales/zh-hant-tw.schema.json
@@ -7,6 +7,13 @@
           "info":"這是一個標題"
         }
       }
+    },
+    "embed": {
+      "settings": {
+        "showButton": {
+          "label": "顯示按鈕"
+        }
+      }
     }
   }
 }
