feat: 🎸 完善 app embed block 样式

--- a/locales/en.schema.json
+++ b/locales/en.schema.json
@@ -9,9 +9,13 @@
       }
     },
     "embed": {
+      "name": "App Embed Block",
       "settings": {
         "showButton": {
           "label": "Show Button"
+        },
+        "buttonText": {
+          "label": "Button Text"
         }
       }
     }
