--- a/locales/zh-hans-cn.schema.json
+++ b/locales/zh-hans-cn.schema.json
@@ -9,9 +9,13 @@
       }
     },
     "embed": {
+      "name": "主题应用嵌入",
       "settings": {
         "showButton": {
           "label": "显示按钮"
+        },
+        "buttonText": {
+          "label": "按钮文本"
         }
       }
     }
