refactor: 💡 使用 locale schema

--- a/locales/en.schema.json
+++ b/locales/en.schema.json
@@ -1,6 +1,8 @@
 {
   "appBlock": {
     "block": {
+      "name": "App Block",
+      "pageTitle": "App Block Page Title",
       "settings":{
         "title": {
           "label": "Title",
@@ -10,6 +12,7 @@
     },
     "embed": {
       "name": "App Embed Block",
+      "pageTitle": "App Embed Block Page Title",
       "settings": {
         "showButton": {
           "label": "Show Button"
