--- a/locales/zh-hans-cn.schema.json
+++ b/locales/zh-hans-cn.schema.json
@@ -1,6 +1,8 @@
 {
   "appBlock": {
     "block": {
+      "name": "应用块",
+      "pageTitle": "应用块页面标题",
       "settings":{
         "title": {
           "label": "标题",
@@ -9,7 +11,8 @@
       }
     },
     "embed": {
-      "name": "主题应用嵌入",
+      "name": "应用嵌入块",
+      "pageTitle": "应用嵌入块页面标题",
       "settings": {
         "showButton": {
           "label": "显示按钮"
